added fonts, icons

--- a/src/assets/less/helpers/_variables.less
+++ b/src/assets/less/helpers/_variables.less
@@ -1,1 +1,29 @@
-@background-color: grey;
+@madison-col: #2a3f50;
+@nepal-col: #8da5b8;
+@silver-col: #c8c8c8;
+@white-col: #fff;
+@spray-col: #82c7e0;
+@gray-col: #7f7f7f;
+@dark-gray-col: #9f9f9f;
+@mountain-meadow-col: #1abc9c;
+@mountain-meadow-dark-col: #16a085;
+@deap-sea-col: #0e8c74;
+@tomato-col: #f75c4c;
+@dark-coral-col: #c94d47;
+@mahogany-col: #bc3535;
+@malibu-col: #59abe3;
+@curious-blue-col: #368bc5;
+@pelorous-col: #2380b5;
+
+@yellow-orange-col: #ffa841;
+@carrot-orange: #f08e19;
+@gorse: #fddc43;
+@moon-yellow: e8bd0a;
+@selective-yellow: #ffb200;
+@tangerine: #dd8f05;
+@amethyst: #b470d0;
+@deep-lilac: #9849b8;
+@terra-cotta: #e16c65;
+@chestnut: #b74e4b;
+@dark-turquolse: #00d4d9;
+@perslan-green: #04a5a5;
