--- a/src/assets/less/common/_general.less
+++ b/src/assets/less/common/_general.less
@@ -3,6 +3,12 @@
   padding: 0;
 }
 
-body{
+.page {
+  background-color: @madison-col;
+  color: @nepal-col;
 }
 
+.main-container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
