--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -1,6 +1,6 @@
 /* helpers */
-@import (reference) "helpers/_variables";
-@import (reference) "helpers/_mixins";
+@import "helpers/_variables";
+@import "helpers/_mixins";
 
 /* base styles */
 @import "base/_typography";
