--- a/src/assets/less/common/_general.less
+++ b/src/assets/less/common/_general.less
@@ -20,6 +20,10 @@
   display: none;
 }
 
+.screen__header {
+  margin-bottom: 20px;
+}
+
 .screen-heading {
   font-size: 28px;
   font-weight: 500;
@@ -32,11 +36,138 @@
 .subtitle {
   color: @nepal-col;
   font-size: 22px;
-  font-weight: 400;
+  font-weight: 300;
   text-align: center;
 }
 
+.subtitle2 {
+  margin-bottom: 25px;
+  font-size: 20px;
+  text-align: center;
+  color: #fff;
+}
+
+// start of buttons 
+.button {
+  padding: 9px 25px;
+  font-size: 18px;
+  line-height: 24px;
+  font-family: "PT Sans";
+  font-weight: bold;
+  min-width: 120px;
+  border: none;
+  background-color: @tomato-col;
+  color: #fff;
+  cursor: pointer;
+}
+
+.button--green {
+  background-color: @mountain-meadow-col;
+
+  &:hover,
+  &:focus {
+    background-color: @mountain-meadow-dark-col; 
+  }
+  &:active{
+    background-color: @deap-sea-col;
+  }
+}
+
+.button--blue {
+  background-color: @malibu-col;
+  &:hover,
+  &:focus {
+    background-color: @curious-blue-col; 
+  }
+  &:active{
+    background-color: @pelorous-col;
+  }
+  
+}
+
+.button--red {
+  background-color: @tomato-col;
+  &:hover,
+  &:focus {
+    background-color: @dark-coral-col; 
+  }
+  &:active{
+    background-color: @mahogany-col;
+  }
+}
+
+
+// end of buttons
+
+
+
+// start of tabs
+
+.tabs {
+  font-size: 0;
+  text-align: center;
+  width: 100%;
+}
+
+.tabs--floated {
+  float: right;
+  width: auto; 
+}
+
+.tabs--upper {
+  margin-top: -20px;
+}
+
+.tabs__item {
+  position: relative;
+  display: inline-block;
+  margin-right: 10px;  
+  padding-right: 10px;
+  font-size: 16px;
+  font-family: 'PT Sans';
+  
+  &::after {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translate(0, -50%);
+    width: 1px;
+    height: 13px;
+    display: block;
+    content: '';
+    background-color: @nepal-col;
+  }
+
+  &:last-child {
+    margin-right: 0;
+    padding-right: 0;
+
+    &::after {
+      display: none;
+    }
+  }
+}
+
+.tabs__link {
+  color: @nepal-col;
+  text-decoration: none;
+  line-height: 0px;
+  
+    &:hover {
+      color: @spray-col;
+    }
+}
+
+.tabs__link--active {
+  color: #fff;
+}
+
+// end of tabs
+
+
 // start of header 
+
+
 
 .header {
   padding: 56px 0 21px;
@@ -110,72 +241,157 @@
 // end of header
 
 // start of settings
+.pom-settings {
+  padding: 63px 0 81px;
+}
+.settings-screen__body {
+}
 
-
-
-// .settings__inner-wrapper {
-//   display: flex;
-//   align-items: center;
-// }
-
-
-.tabs {
+.pom-settings__list {
+  margin: 0 auto;
+  max-width: 855px;
+  flex-wrap: wrap;
+  list-style-type: none;
   font-size: 0;
-  text-align: center;
-  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
-.tabs--floated {
-  float: right;
-  width: auto; 
+.pom-settings__item {
+  margin-bottom: 61px;
+  display: inline-block;
+  font-size: 0;
+  width: 40%;
+  padding-left: 35px;
+
+  &:nth-child(3) {
+    margin-bottom: 0;
+  }
+  
+  &:nth-child(4) {
+    margin-bottom: 0;
+  }
 }
 
-.tabs--upper {
-  margin-top: -20px;
+.pom-settings__heading {
+  width: 40%;
+  margin-right: 42px;
+  display: inline-block;
+  font-size: 14px;
+  color: #fff;
+  font-family: 'PT Sans';
 }
 
-.tabs__item {
+.pom-settings__input-wrapper {
   position: relative;
   display: inline-block;
-  margin-right: 10px;  
-  padding-right: 10px;
+  margin-bottom: 13px;
+  width: 100px;
+}
+
+.pom-settings__input {
+  display: block;
+  width: 100%;
+  padding: 0 0 7px;
+  text-align: center;
   font-size: 16px;
-  font-family: 'PT Sans';
-  
-  &::after {
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translate(0, -50%);
-    width: 1px;
-    height: 13px;
-    display: block;
-    content: '';
-    background-color: @nepal-col;
-  }
-
-  &:last-child {
-    margin-right: 0;
-    padding-right: 0;
-
-    &::after {
-      display: none;
-    }
-  }
-}
-
-.tabs__link {
   color: @nepal-col;
-  text-decoration: none;
-  line-height: 0px;
-  
-    &:hover {
-      color: @spray-col;
-    }
+  border-bottom: 1px solid @nepal-col;
 }
 
-.tabs__link--active {
+.pom-settings__btn {
+  top: 50%;
+  transform: translate(0, -50%);
+  position: absolute;
+  border: none;
+  background: none;
+  color: @nepal-col;
+  font-family: "Roboto";
+}
+
+.pom-settings__btn--minus {
+  left: 0;
+  &::after {
+    display: block;
+    content: "\e90b";
+    font-family: "Icon";
+    font-size: 11px;
+  }
+}
+
+.pom-settings__btn--plus {
+  right: 0;
+  &::after {
+    display: block;
+    content: "\e900";
+    font-family: "Icon";
+    font-size: 11px;
+  }
+}
+
+.pom-settings__btn:hover {
+  color: @spray-col;
+  cursor: pointer;
+}
+
+.pom-settings__btn:hover ~ .pom-settings__input {
+  color: #fff;
+  border-color: @spray-col;
+}
+
+.pom-settings__instruction {
+  font-size: 14px;
+}
+
+.pom-settings__highlighted {
   color: #fff;
 }
 
+.circled {
+  position: relative;
+  &::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 17px;
+    height: 17px;
+    border-radius: 50%;
+    display: block;
+    content: '';
+  }
+
+  &:nth-child(1)::after {
+    background-color: @selective-yellow;
+  }
+
+  &:nth-child(2)::after {
+    background-color: @dark-turquolse;
+  }
+
+  &:nth-child(3)::after {
+    background-color: @malibu-col;
+  }
+
+  &:nth-child(4)::after {
+    background-color: @amethyst;
+  }
+}
+
+.settings-screen__cycle-preview-img {
+  width: 100%;
+  margin-bottom: 40px;
+}
+
+.settings-screen--buttons {
+  font-size: 0;
+  text-align: center;
+}
+
+.settings-screen--button {
+  margin-right: 20px;
+
+  &:last-child {
+    margin-right: 0;
+  }
+}
 // end of settings
