made categories settings tab

--- a/src/assets/less/helpers/_variables.less
+++ b/src/assets/less/helpers/_variables.less
@@ -15,6 +15,7 @@
 @curious-blue-col: #368bc5;
 @pelorous-col: #2380b5;
 
+@categories-list-border-col: #425869;
 @yellow-orange-col: #ffa841;
 @carrot-orange: #f08e19;
 @gorse: #fddc43;
