--- a/src/assets/less/common/_general.less
+++ b/src/assets/less/common/_general.less
@@ -47,6 +47,42 @@
   color: #fff;
 }
 
+.list {
+  list-style-type: none;
+}
+
+.circled {
+  position: relative;
+  margin-left: 45px;
+  &::after {
+    position: absolute;
+    top: 0;
+    left: -(45 - 17px/2);
+    width: 17px;
+    height: 17px;
+    border-radius: 50%;
+    display: block;
+    content: '';
+    background-color: #fff;
+  }
+
+  &:nth-child(1)::after {
+    background-color: @selective-yellow;
+  }
+
+  &:nth-child(2)::after {
+    background-color: @dark-turquolse;
+  }
+
+  &:nth-child(3)::after {
+    background-color: @malibu-col;
+  }
+
+  &:nth-child(4)::after {
+    background-color: @amethyst;
+  }
+}
+
 // start of buttons 
 .button {
   padding: 9px 25px;
@@ -190,7 +226,6 @@
 }
 
 .header__menu-list {
-  list-style: none;
   display: flex;
   justify-content: flex-start;
 } 
@@ -243,18 +278,21 @@
 }
 // end of header
 
+.screen-body {
+  margin-bottom: 50px;
+}
+
 // start of settings
 .pom-settings {
-  padding: 63px 0 81px;
+  padding: 63px 0 0;
 }
 .settings-screen__body {
 }
 
 .pom-settings__list {
-  margin: 0 auto;
+  margin: 0 auto 81px;
   max-width: 855px;
   flex-wrap: wrap;
-  list-style-type: none;
   font-size: 0;
   display: flex;
   justify-content: space-between;
@@ -265,7 +303,7 @@
   display: inline-block;
   font-size: 0;
   width: 40%;
-  padding-left: 35px;
+  // padding-left: 35px; for circle
 
   &:nth-child(3) {
     margin-bottom: 0;
@@ -350,52 +388,70 @@
   color: #fff;
 }
 
-.circled {
-  position: relative;
-  &::after {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 17px;
-    height: 17px;
-    border-radius: 50%;
-    display: block;
-    content: '';
-  }
 
-  &:nth-child(1)::after {
-    background-color: @selective-yellow;
-  }
 
-  &:nth-child(2)::after {
-    background-color: @dark-turquolse;
-  }
-
-  &:nth-child(3)::after {
-    background-color: @malibu-col;
-  }
-
-  &:nth-child(4)::after {
-    background-color: @amethyst;
-  }
-}
-
-.settings-screen__cycle-preview-img {
+.pom-settings__cycle-preview-img {
   width: 100%;
   margin-bottom: 40px;
 }
 
-.settings-screen__buttons {
-  padding-bottom: 50px;
+.pom-settings__buttons {
   font-size: 0;
   text-align: center;
 }
 
-.settings-screen--button {
+.pom-settings--button {
   margin-right: 20px;
 
   &:last-child {
     margin-right: 0;
   }
 }
+
+
+// start of categories 
+.categories-settings {
+  padding-top: 73px;
+  text-align: center;
+}
+
+.categories-settings__list {
+  color: @nepal-col;
+  text-align: left;
+  width: 295px;
+  margin: 0 auto 97px;
+}
+
+.categories-settings__list-item {
+  padding-bottom: 10px;
+  margin-bottom: 34px;
+  border-bottom: 1px solid @categories-list-border-col;
+  font-size: 16px;
+  line-height: 16px;
+}
+
+.categories-settings__list-item.circled {
+  &:nth-child(1)::after {
+    background-color: @selective-yellow;
+  }
+  &:nth-child(2):after {
+    background-color: @malibu-col;
+  }
+  &:nth-child(3):after {
+    background-color: @amethyst;
+  }
+  &:nth-child(4):after {
+    background-color: @terra-cotta;
+  }
+  &:nth-child(5):after {
+    background-color: @dark-turquolse;    
+  }
+}
+
+
+
+// end of categories 
+
+
+
 // end of settings
