started task list screen

--- a/src/assets/less/base/_typography.less
+++ b/src/assets/less/base/_typography.less
@@ -31,6 +31,15 @@
   src: url("../../fonts/PTSans-reg.woff") format('woff');
 }
 
+
+// @font-face {
+//   font-family: "PT Sans";
+//   font-weight: 700;
+//   font-style: normal;  
+//   src: url("../../fonts/ptsasnbold.woff") format('woff');
+// }
+@import url('https://fonts.googleapis.com/css?family=PT+Sans:700');
+
 @font-face {
   font-family: "Icon";
   src: url("../../fonts/iconfont.woff") format('woff');
