--- a/src/assets/less/helpers/_variables.less
+++ b/src/assets/less/helpers/_variables.less
@@ -14,6 +14,13 @@
 @malibu-col: #59abe3;
 @curious-blue-col: #368bc5;
 @pelorous-col: #2380b5;
+@task-card-btn: #cacaca;
+@task-card-active-btn: #88a3b5;
+@urgent-prior-col: #f6a440;
+@urgent-prior-text: #e74c3c;
+@high-prior-text: #e67e22;
+@middle-prior-text-col: #dfb500;
+
 
 @categories-list-border-col: #425869;
 @yellow-orange-col: #ffa841;
