--- a/src/assets/less/common/_general.less
+++ b/src/assets/less/common/_general.less
@@ -30,7 +30,7 @@
   color:#ffffff;
   text-align: center;
   line-height: 23px;
-  margin-bottom: 25px;
+  margin-bottom: 30px;
 }
 
 .subtitle {
@@ -455,3 +455,263 @@
 
 
 // end of settings
+
+
+// start of task list 
+.task-list {
+  margin-bottom: 30px;
+}
+
+.task-list-screen__add-btn {
+  border: none;
+  background: none;
+  vertical-align: middle;
+  margin-left: 18px;
+  cursor: pointer;
+  &:after { 
+    font-family: "Icon";
+    font-weight: 400;
+    content: "\e900";
+    font-size: 14px;
+    color: #fff;
+  }
+}
+
+
+.task-card {
+  background-color: #fff;
+  margin-bottom: 9px;
+  border-left: 9px solid red;
+  font-size: 0;
+  box-shadow: 0px 2px  10px 0px #222;
+  .clearfix;
+
+
+  &--overdue {
+    .task-card__date {
+      color: @tomato-col;
+    }
+  }
+  &--done {
+    .task-card__task-name {
+      text-decoration: line-through;
+    }
+  }
+  //categories
+  &--hobby {
+    border-color: @amethyst;
+  }
+  &--work {
+    border-color: @selective-yellow;
+  }
+  &--education {
+    border-color: @malibu-col;
+  }
+  &--sport {
+    border-color: @terra-cotta;
+  }
+  &--other {
+    border-color: @dark-turquolse;
+  }
+  //priority
+  &--urgent-priority {
+    .task-card__task-name{
+      color: @urgent-prior-text;
+    }
+    .task-card__start{
+      background-color:  @tomato-col;
+      &:hover,
+      &:focus,
+      &:active {
+        background-color: darken( saturate(@tomato-col, 10%), 9%);
+      }
+    }
+  }
+  &--high-priority {
+    .task-card__task-name{
+      color: @high-prior-text;
+    }
+    .task-card__start{
+      background-color: @yellow-orange-col;
+      &:hover,
+      &:focus,
+      &:active {
+        background-color: darken( saturate(@yellow-orange-col, 10%), 9%);
+      }
+    }
+  }
+  &--middle-priority {
+    .task-card__task-name{
+      color: @middle-prior-text-col;
+    }
+    .task-card__start{
+      background-color: @gorse;
+      &:hover,
+      &:focus,
+      &:active {
+        background-color: #e88b19;
+      }
+    }
+  }
+  &--low-priority {
+    .task-card__task-name{
+      color: @mountain-meadow-col;
+    }
+    .task-card__start{
+      background-color: @mountain-meadow-col;
+      &:hover,
+      &:focus,
+      &:active {
+        background-color: darken( saturate(@mountain-meadow-col, 10%), 9%);
+      }
+    }
+  }
+
+}
+
+
+.task-card__date {
+  display: inline-block;
+  padding: 0 35px 0 25px;
+  font-family: 'Roboto';
+  font-size: 11px;
+  font-weight: 700;
+  color: @dark-gray-col;
+  text-transform: uppercase;
+  vertical-align: middle;
+  
+}
+
+.task-card__task-info {
+  display: inline-block;
+  padding: 20px 0;
+  vertical-align: middle;
+}
+
+.task-card__task-name {
+  margin-bottom: 4px;
+  font-size: 19px;
+  font-weight: 500;
+}
+
+.tasc-card__task-description {
+  font-size: 15px;
+  color: @gray-col;
+}
+
+.task-card__buttons {
+  float: right;
+  display: flex;
+  height: 87px;
+}
+
+.task-card__task-adjustsments {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.task-card__button {
+  margin: 6px 0;
+  background: none;
+  font-family: "Icon";
+  font-size: 17px;
+  width: 20px;
+  height: 20px;
+  color: @task-card-btn;
+  border: none;
+  cursor: pointer;
+
+  &--to-daily {
+    &::after {
+      content: '\e904';
+    }
+  }
+
+  &--edit {
+    &::after {
+      content: '\e907';
+    }
+  }
+
+  &:hover,
+  &:active,
+  &:focus {
+    color: @task-card-active-btn;
+    outline: none;
+  }
+}
+.task-card__start {
+  position: relative;
+  display: inline-block;
+  margin-left: 30px;
+  height: 100%;
+  text-align: center;
+  background: red;
+  width: 87px;
+  height: 87px;
+  border: none;
+  cursor: pointer;
+
+  &::after {
+    position: absolute;
+    top: 50%;    
+    left: 50%;    
+    transform: translate(-50%, -50%);    
+    content: '\e913';
+    color: #fff;
+    font-size: 48px;
+    font-family: 'Icon';
+  }
+
+  &::before {
+    position: absolute;
+    top: 50%;    
+    left: 50%;    
+    transform: translate(-50%, -50%);    
+    font-family: 'PT Sans';    
+    font-weight: 700;
+    content: '3';
+    font-size: 22px;
+    color: #fff;
+  }
+
+  &:hover{
+    &::after {
+      content: "\e90e";
+    }
+
+    &::before {
+      display: none;
+    }
+  }
+}
+
+.task-list-screen__global-list-toggler {
+  border: none;
+  background: none;
+  font-family: "PT Sans";
+  font-weight: 700;
+  font-size: 20px;
+  color: @nepal-col;
+  cursor: pointer;
+
+  &::after {
+    margin-top: -2px;
+    margin-left: 5px;
+    font-weight: 300;
+    font-size: 10px;
+    font-family: "Icon";
+    display: inline-block;
+    content: "\e909";
+  }
+
+  &:hover {
+    color: @spray-col;
+  }
+}
+
+
+
+
+// end of task list 
