--- a/src/assets/less/helpers/_variables.less
+++ b/src/assets/less/helpers/_variables.less
@@ -20,7 +20,15 @@
 @urgent-prior-text: #e74c3c;
 @high-prior-text: #e67e22;
 @middle-prior-text-col: #dfb500;
+@title-text-color: #3c5162;
+@title-bg-col: rgba(219, 234,245, 0.9);
+@urgent-prior-radio: #f15a4a;
 
+
+@notification-bg: #529bcd;
+@notification-warnibg-bg: #df9843;
+@notification-error-bg: #d8584d;
+@notification-success-bg: #1ca991;
 
 @categories-list-border-col: #425869;
 @yellow-orange-col: #ffa841;
