--- a/src/assets/less/common/_general.less
+++ b/src/assets/less/common/_general.less
@@ -16,12 +16,44 @@
   .clearfix;
 }
 
-.hidden {
-  display: none;
+.screen-tint {
+  z-index: 1;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: #000;
+  opacity: 0.7;
+  height: 100vh;
+  width: 100%;
 }
 
 .screen-header {
   margin-bottom: 20px;
+}
+
+.title {
+  position: relative;
+  display: inline-block;
+  padding: 7px 15px;
+  font-size: 12px;
+  color: @title-text-color;
+  font-family: "Roboto";
+  font-weight: 700;
+  background-color: @title-bg-col;
+  border-radius: 2px;
+  box-shadow: 0px 0 0px 1px rgba(200, 200, 200, 0.2);
+  &::after {
+    position: absolute;
+    top: 0;
+    transform: translateY(-100%);
+    left: 16px;
+    width: 0; 
+    height: 0; 
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 5px solid @title-bg-col;
+    content: "";
+  }
 }
 
 .screen-heading {
@@ -95,6 +127,12 @@
   background-color: @tomato-col;
   color: #fff;
   cursor: pointer;
+  margin-right: 20px;
+  // margin-right: 20px;
+
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
 .button--green {
@@ -140,14 +178,20 @@
 // start of tabs
 
 .tabs {
+  // margin-bottom: 10px;
   font-size: 0;
   text-align: center;
   width: 100%;
 }
 
-.tabs--floated {
+.tabs--right {
   float: right;
   width: auto; 
+}
+
+.tabs--left {
+  width: auto; 
+  text-align: left;
 }
 
 .tabs--upper {
@@ -458,9 +502,51 @@
 
 
 // start of task list 
+
+.today-tasks__tabs-wrapper {
+  margin-bottom: 16px ;
+}
+
+
+.message-section {
+  padding-top: 117px;
+  text-align: center;
+
+  &--compact {
+   padding-top: 80px; 
+  }
+}
+
+.message-section__img {
+  width: 170px;
+  margin-bottom: 70px;
+}
+
+.message-section__message {
+  margin: 0 auto 35px ;
+  color: @nepal-col;
+  text-align: center;
+  font-size: 36px;
+  font-weight: 300;
+  max-width: 850px;
+
+  
+
+  &--done {
+    margin-bottom: 135px;  
+  }
+}
+
+.message-section__icon {
+  display: block;
+  font-family: "Icon";
+  font-size: 65px;
+  margin-bottom: 20px;
+}
+
+
 .task-list {
   margin-bottom: 30px;
-  // box-shadow: 0px 2px  10px 0px #222;
   
   
 
@@ -505,7 +591,7 @@
   box-shadow: 0px 2px  10px 0px #222;
   .clearfix;
 
-
+  //states
   &--overdue {
     .task-card__date {
       color: @tomato-col;
@@ -519,18 +605,33 @@
   //categories
   &--hobby {
     border-color: @amethyst;
+    .task-card__delete-indicator {
+      background-color: @amethyst;
+    }
   }
   &--work {
     border-color: @selective-yellow;
+    .task-card__delete-indicator {
+      background-color: @selective-yellow;
+    }
   }
   &--education {
     border-color: @malibu-col;
+    .task-card__delete-indicator {
+      background-color: @malibu-col;
+    }
   }
   &--sport {
     border-color: @terra-cotta;
+    .task-card__delete-indicator {
+      background-color: @terra-cotta;
+    }
   }
   &--other {
     border-color: @dark-turquolse;
+    .task-card__delete-indicator {
+      background-color: @dark-turquolse;
+    }
   }
   //priority
   &--urgent-priority {
@@ -586,19 +687,70 @@
     }
   }
 
+  &--to-delete {
+    .task-card__date {
+      display: none;
+    }
+    border: none;
+    .task-card__delete-indicator {
+      display: inline-block;
+    }
+  }
+  
 }
+
+.task-card__delete-indicator  {
+  position: relative;
+  display: none;
+  width: 87px;
+  height: 87px;
+  margin-right: 17px;
+  vertical-align: top;
+  cursor: pointer;
+  
+  &::after {
+    position: absolute;
+    width: 100%;
+    right: 0;
+    top: 50%;
+    transform: translateY(-52%);
+    text-align: center;
+    content: "\e914";
+    font-family: "Icon";
+    font-size: 40px;
+    color: #fff;
+  }
+
+  &--active::after {
+    content: "\e906";
+  }
+}
+
 
 
 .task-card__date {
   display: inline-block;
   padding: 0 35px 0 25px;
-  font-family: 'Roboto';
   font-size: 11px;
   font-weight: 700;
   color: @dark-gray-col;
   text-transform: uppercase;
   vertical-align: middle;
+  text-align: center;  
+  min-width: 95px;
+}
+
+.task-card__day {
+  display: block;
+  font-family: "PT Sans";
+  font-weight: 700;
+  font-size: 27px;
   
+}
+
+.task-card__mounth {
+  display: block;
+  font-size: 10px;
 }
 
 .task-card__task-info {
@@ -783,6 +935,16 @@
       background-color: @dark-turquolse;
     }
   }
+
+  .task-card--to-delete {
+    margin-left: -9px;
+
+    .task-card__delete-indicator {
+      &::after {
+        width: 93%;
+      }
+    } 
+  }
 }
 
 .task-list__decorative-line {
@@ -846,7 +1008,469 @@
   border: none;
 }
 
+.modal-win {
+  z-index: 100;
+  position: fixed;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 500px;
+  padding: 13px 27px 27px;
+  background-color: @madison-col;
+  font-size: 0;
+}
 
 
+.modal-win__buttons-wrapper {
+  .clearfix;
+}
 
-// end of task list 
+.modal-win__btn {
+  font-family: "Icon";
+  border: none;
+  background: none;
+  color: @nepal-col;
+  font-size: 20px;
+  cursor: pointer;
+  margin-right: 14px;
+
+  &--remove::after {
+    content: "\e914";
+    float: left;
+  }
+  &--close::after {
+    content: "\e906";
+  }
+  &--confirm::after {
+    content: "\e905";
+  }
+
+  &:hover {
+    color: @spray-col;
+  }
+
+  &:last-child {
+    margin-right: 0;
+  }
+
+}
+
+.modal-win__control-btns {
+  float: right;
+}
+
+.modal-win__heading {
+  margin-bottom: 10px;
+}
+
+.task-settings-list {
+  padding: 17px;
+}
+
+.task-settings-list__item {
+  min-width: 413px;
+  padding: 8px 0;
+  margin-bottom: 33px;
+  border-bottom: 1px solid @categories-list-border-col;
+
+  &:last-child {
+    margin-bottom: 20px;
+  }
+}
+
+.task-settings-list__heading {
+  margin-bottom: 14px;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.task-settings-list__text-input {
+  background-color: @madison-col;
+  color: #fff;
+  font-size: 16px;
+  font-family: "Roboto";
+  border: none;
+}
+.task-settings-list__text-input::-webkit-input-placeholder{
+  color: @nepal-col;
+}
+.task-settings-list__text-input::-moz-placeholder{
+  color: @nepal-col;
+}
+.task-settings-list__text-input:-ms-input-placeholder{
+  color: @nepal-col;
+}
+.task-settings-list__text-input:-moz-placeholder{
+  color: @nepal-col;
+}
+
+.task-settings-list__label {
+  margin-right: 10px;
+  color: @nepal-col;
+  &:hover {
+    color: @spray-col;
+
+    .task-settings-list__label-circle--work {
+      background-color: @selective-yellow;
+    }
+    .task-settings-list__label-circle--education {
+      background-color: @malibu-col;
+    }
+    .task-settings-list__label-circle--hobby {
+      background-color: @amethyst;
+    }
+    .task-settings-list__label-circle--sport {
+      background-color: @terra-cotta;
+    }
+    .task-settings-list__label-circle--other {
+      background-color: @dark-turquolse;
+    }
+
+    .task-settings-list__label-circle--urgent {
+      background-color: @urgent-prior-radio;
+    }
+    .task-settings-list__label-circle--high {
+      background-color: @yellow-orange-col;
+    }
+    .task-settings-list__label-circle--middle {
+      background-color: @gorse;;
+    }
+    .task-settings-list__label-circle--low {
+      background-color:  @mountain-meadow-col;
+    }
+  }
+}
+
+.task-settings-list__radio {
+  display: none;
+}
+
+.task-settings-list__label-circle {
+  vertical-align: top;
+  margin-right: 3px;
+  position: relative;
+  display: inline-block;
+  width: 17px;
+  height: 17px;
+  border-radius: 50%;
+  background-color: @nepal-col;
+}
+
+.task-settings-list__label-text {
+  font-size: 16px;
+} 
+
+.task-settings-list__radio:checked + .task-settings-list__label {
+  color: #fff;
+  .task-settings-list__label-circle {
+    &--work {
+      background-color: @selective-yellow;
+    }
+    &--education {
+      background-color: @malibu-col;
+    }
+    &--hobby {
+      background-color: @amethyst;
+    }
+    &--sport {
+      background-color: @terra-cotta;
+    }
+    &--other {
+      background-color: @dark-turquolse;
+    }
+
+
+    &--urgent {
+      background-color: @urgent-prior-radio;
+    }
+    &--high {
+      background-color: @yellow-orange-col;
+    }
+    &--middle {
+      background-color: @gorse;;
+    }
+    &--low {
+      background-color:  @mountain-meadow-col;
+    }
+
+    &::after {
+      box-sizing: border-box;
+      content: "";
+      position: absolute;
+      top: 4px;
+      left: 4px;
+      width: 9px;
+      height: 9px;
+      border: 2px solid @madison-col;
+      border-radius: 50%;
+    }
+  }
+  &:hover {
+    color: @spray-col;
+  }
+}
+
+
+.estimation-label {
+  margin-right: 9px;
+  display: inline-block;
+  width: 21px;
+  height: 19px;
+  background: url("/empty-tomato.svg") no-repeat center;
+}
+
+.estimation-radio {
+  display: none;
+}
+
+.estimation-radio:checked + .estimation-label {
+  background: url("/fill tomato.svg") no-repeat center;
+}
+
+.remove-task__message {
+  margin-bottom: 42px;
+  padding: 129px 30px;
+  color: @nepal-col;
+  text-align: center;
+  font-size: 36px;
+  font-weight: 300;
+}
+
+.remove-task__buttons {
+  margin-bottom: 25px;
+  text-align: center;
+}
+// end of task list
+
+
+// start of timer 
+
+.timer-screen {
+  position: relative;
+}
+
+.timer-screen__subtitle {
+  font-family: "Roboto";
+  font-size: 17px;
+  font-weight: 400;
+  color: #fff;
+  text-align: center;
+}
+
+.timer__iterations {
+  margin-bottom: 53px;
+  text-align: center;
+  font-size: 0;
+}
+
+.timer__iteration-pomodora {
+  display: inline-block;
+  margin-right: 11px;
+  width: 26px;
+  height: 23px;
+  background: url("/empty-tomato.svg") no-repeat center;
+
+  &:last-child {
+    margin-right: 0;
+  }
+
+
+  &--active {
+    background: url("/fill tomato.svg") no-repeat center;
+  }
+
+  &--failed {
+    background: url("/tomato-failed.svg") no-repeat center;
+  }
+}
+
+.timer__clock {
+  position: relative;
+  width: 266px;
+  height: 266px;
+  margin: 0 auto 70px; 
+  border: 5px solid @yellow-orange-col;
+  border-radius: 50%;
+  box-shadow: 0px 0px 90px rgba(0, 0, 0, 0.3);
+}
+
+.timer__clock-text {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  text-align: center;
+  font-family: "PT Sans";
+  font-size: 26px;
+  font-weight: 400;
+  color: #fff;
+}
+
+.timer__time-indicator {
+  display: block;
+  font-size: 100px;
+  line-height: 85px;
+  font-family: "Roboto";
+}
+
+.timer__min-word {
+  display: block;
+  font-size: 24px;
+}
+
+.timer__break-word {
+  font-size: 15px;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.timer__notification {
+  text-align: center;
+  margin: 0 auto;
+  display: block;
+}
+
+.timer__buttons {
+  text-align: center;
+  font-size: 0;
+
+  .button {
+    min-width: 168px;
+  }
+}
+
+.timer__inner-clock-circle {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  border: 38px solid @nepal-col;
+  width: 240px;
+  height: 240px;
+}
+
+.screen-arrows {
+  padding: 0 30px;
+  position: fixed;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  .clearfix;
+}
+
+.screen-arrow {
+  font-family: "Icon";
+  text-decoration: none;
+  color: @nepal-col;
+  font-size: 40px;
+  
+  &:hover{
+    color: @spray-col;
+  }
+
+  &--left::after {
+    content: "\e902";
+  }
+  &--right::after {
+    content: "\e903";
+    float: right;
+  }
+}
+// end of timer
+// start of reports
+.reports-screen {
+  position: relative;
+}
+
+.reports-screen__report {
+  padding: 119px 0 79px;
+  font-size: 0;
+  text-align: center;
+}
+
+.reports-screen__img {
+  margin: 0 auto;
+}
+
+.hidden {
+  display: none;
+} 
+
+.notification {
+  position: fixed;
+  right: 92px;
+  bottom: 64px;
+  width: 451px;
+  border: 1px solid #fff;
+  background-color: @notification-bg;
+  font-size: 0;
+  border-radius: 4px;
+  .clearfix;
+
+  &--warning {
+    background-color: @notification-warnibg-bg; 
+  }
+
+  &--error {
+    background-color: @notification-error-bg;
+
+    .notification__icon {
+      &::after {
+        content: "\e90f";
+      }
+    }
+  }
+  &--success {
+    background-color:@notification-success-bg;
+
+    .notification__icon {
+      &::after {
+        content: "\e911";
+      }
+    }
+  }
+}
+
+.notification__icon {
+  display: inline-block;
+  padding: 8px 16px;
+  background-color: rgba(255, 255, 255, 0.28);
+  font-family: "Icon";
+  font-size: 34px;
+  color: #fff;
+  &::after {
+    content: "\e910";
+  }
+  vertical-align: middle;
+}
+
+.notification__text {
+  padding-left: 13px;
+  color: #fff;
+  font-size: 15px;
+  font-weight: 700;
+  vertical-align: middle;
+}
+
+.notification__close-btn {
+  float: right;
+  display: inline-block;
+  background: none;
+  border: none;
+  cursor: pointer;
+  margin-right: 17px;
+  margin-top: 13px;
+  
+
+  &::after {
+    font-family: "Icon";
+    content: "\e906";
+    font-size: 25px;
+    color: #fff;
+  }
+}
+
+// end of reports
