--- a/src/assets/less/helpers/_mixins.less
+++ b/src/assets/less/helpers/_mixins.less
@@ -5,3 +5,13 @@
     clear: both;
   }
 }
+
+.reset-link {
+  text-decoration: none;
+  color: @nepal-col;
+}
+
+.reset-btn {
+  background: none;
+  border: none;
+}
