--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -2,9 +2,24 @@
 @import "helpers/_variables";
 @import "helpers/_mixins";
 
+
 /* base styles */
 @import "base/_typography";
 @import "base/_normalize";
+
+// components
+@import "../../app/components/tabs/tabs";
+@import "../../app/components/modals/modals";
+@import "../../app/components/notifications/notifications";
+@import "../../app/components/button/button";
+@import "../../app/components/main-header/main-header";
+
+/* pages */
+@import "../../app/pages/tasks-list/tasks-list";
+@import "../../app/pages/settings/settings";
+@import "../../app/pages/timer/timer";
+@import "../../app/pages/reports/reports";
+
 
 /* common styles */
 @import "common/_general";
