--- a/src/app/pages/settings/settings.less
+++ b/src/app/pages/settings/settings.less
@@ -49,6 +49,7 @@
   text-align: center;
   font-size: 16px;
   color: @nepal-col;
+  .reset-btn;
   border-bottom: 1px solid @nepal-col;
 }
 
@@ -99,7 +100,7 @@
   color: #fff;
 }
 
-.pom-settings__cycle-preview-img {
+.pom-cycle__img {
   width: 100%;
   margin-bottom: 40px;
 }
@@ -115,6 +116,10 @@
   &:last-child {
     margin-right: 0;
   }
+}
+
+.pom-cycle {
+  margin-bottom: 35px;
 }
 
 // start of categories 
