--- a/src/assets/less/common/_general.less
+++ b/src/assets/less/common/_general.less
@@ -8,6 +8,10 @@
   background-color: @madison-col;
   color: @nepal-col;
   font-family: "Roboto";
+
+  &--scrolled {
+    padding-top: 136px;
+  }
 }
 
 .main-container {
