--- a/src/assets/less/helpers/_variables.less
+++ b/src/assets/less/helpers/_variables.less
@@ -24,7 +24,7 @@
 @title-bg-col: rgba(219, 234,245, 0.9);
 @urgent-prior-radio: #f15a4a;
 
-
+@short-break-color: #57a6dc;
 @notification-bg: #529bcd;
 @notification-warnibg-bg: #df9843;
 @notification-error-bg: #d8584d;
