--- a/src/app/components/header/header.less
+++ b/src/app/components/header/header.less
@@ -1,9 +1,9 @@
 .header {
   padding: 56px 0 21px;
-  background-color: @madison-col;
-  
+  transition: 0.08s background-color;
   &--sticky {
     position: fixed;
+    background-color: @madison-col;
     left: 0;
     top: 0;
     z-index: 999;
