--- a/src/app/components/notifications/notifications.less
+++ b/src/app/components/notifications/notifications.less
@@ -48,7 +48,8 @@
 }
 
 .notification__text {
-  padding-left: 13px;
+  display: inline-block;
+  padding-left: 23px;
   color: #fff;
   font-size: 15px;
   font-weight: 700;
@@ -57,7 +58,6 @@
 
 .notification__close-btn {
   .reset-btn;
-  float: right;
   display: inline-block;
   cursor: pointer;
   margin-right: 17px;
