--- a/src/app/components/notifications/notifications.less
+++ b/src/app/components/notifications/notifications.less
@@ -58,7 +58,7 @@
 
 .notification__close-btn {
   .reset-btn;
-  display: inline-block;
+  float: right;
   cursor: pointer;
   margin-right: 17px;
   margin-top: 13px;
