--- a/src/app/components/tabs/tabs.less
+++ b/src/app/components/tabs/tabs.less
@@ -48,9 +48,30 @@
   }
 }
 
-.tabs__link {
+.tabs__btn {
   .reset-link;
+  font-family: "PT Sans";
+  font-size: 16px;
   line-height: 0px;
+  color: @nepal-col;
+  cursor: pointer;
+  &:hover,
+  &:focus,
+  &:active {
+    color: @spray-col;
+  }
+  &--current {
+    color: #fff;
+  }
+}
+
+.tabs__btn {
+  .reset-btn;
+  font-family: "PT Sans";
+  font-size: 16px;
+  line-height: 16px;
+  color: @nepal-col;
+  cursor: pointer;
   &:hover,
   &:focus,
   &:active {
