--- a/src/app/components/modals/modals.less
+++ b/src/app/components/modals/modals.less
@@ -1,5 +1,5 @@
 .modal-win {
-  z-index: 100;
+  z-index: 9999;
   position: fixed;
   top: 50px;
   left: 50%;
@@ -75,6 +75,7 @@
 }
 
 .task-settings-list__text-input {
+  width: 100%;
   background-color: @madison-col;
   color: #fff;
   font-size: 16px;
