--- a/src/app/pages/tasks-list/task-list.hbs
+++ b/src/app/pages/tasks-list/task-list.hbs
@@ -2,7 +2,7 @@
   <header class="screen-header">
     <div class="main-container">
       <h1 class="screen-heading task-list-screen__screen-heading">Dalily Task List
-        <button class="task-list-screen__add-btn"></button>
+        <button class="task-list-screen__add-btn modal-button" data-modal-action="modal-add"></button>
       </h1>
       <div class="today-tasks__tabs-wrapper">
         <ul class="tabs tabs--right list">
@@ -56,7 +56,7 @@
             <section class="task-card__buttons">
               <section class="task-card__task-adjustsments">
                 <button class="task-card__button task-card__button--to-daily hidden"></button>
-                <button class="task-card__button task-card__button--edit"></button>
+                <button class="task-card__button task-card__button--edit modal-button" data-modal-action="modal-edit"></button>
               </section>
               <a href='/timer' class="task-card__start link"></a>
             </section>
@@ -71,7 +71,7 @@
             <section class="task-card__buttons">
               <section class="task-card__task-adjustsments">
                 <button class="task-card__button task-card__button--to-daily hidden"></button>
-                <button class="task-card__button task-card__button--edit"></button>
+                <button class="task-card__button task-card__button--edit modal-button" data-modal-action="modal-edit"></button>
               </section>
               <a href='/timer' class="task-card__start link"></a>
             </section>
@@ -86,7 +86,7 @@
             <section class="task-card__buttons">
               <section class="task-card__task-adjustsments">
                 <button class="task-card__button task-card__button--to-daily hidden"></button>
-                <button class="task-card__button task-card__button--edit"></button>
+                <button class="task-card__button task-card__button--edit modal-button" data-modal-action="modal-edit"></button>
               </section>
               <a href='/timer' class="task-card__start link"></a>
             </section>
@@ -101,7 +101,7 @@
             <section class="task-card__buttons">
               <section class="task-card__task-adjustsments">
                 <button class="task-card__button task-card__button--to-daily hidden"></button>
-                <button class="task-card__button task-card__button--edit"></button>
+                <button class="task-card__button task-card__button--edit modal-button" data-modal-action="modal-edit"></button>
               </section>
               <a href='/timer' class="task-card__start link"></a>
             </section>
@@ -116,7 +116,7 @@
             <section class="task-card__buttons">
               <section class="task-card__task-adjustsments">
                 <button class="task-card__button task-card__button--to-daily hidden"></button>
-                <button class="task-card__button task-card__button--edit"></button>
+                <button class="task-card__button task-card__button--edit modal-button" data-modal-action="modal-edit"></button>
               </section>
               <a href='/timer' class="task-card__start link"></a>
             </section>
@@ -162,7 +162,7 @@
             <section class="task-card__buttons">
               <section class="task-card__task-adjustsments">
                 <button class="task-card__button task-card__button--to-daily"></button>
-                <button class="task-card__button task-card__button--edit"></button>
+                <button class="task-card__button task-card__button--edit modal-button" data-modal-action="modal-edit"></button>
               </section>
               <a href='/timer' class="task-card__start link"></a>
             </section>
@@ -177,7 +177,7 @@
             <section class="task-card__buttons">
               <section class="task-card__task-adjustsments">
                 <button class="task-card__button task-card__button--to-daily"></button>
-                <button class="task-card__button task-card__button--edit"></button>
+                <button class="task-card__button task-card__button--edit modal-button" data-modal-action="modal-edit"></button>
               </section>
               <a href='/timer' class="task-card__start link"></a>
             </section>
@@ -203,7 +203,7 @@
             <section class="task-card__buttons">
               <section class="task-card__task-adjustsments">
                 <button class="task-card__button task-card__button--to-daily"></button>
-                <button class="task-card__button task-card__button--edit"></button>
+                <button class="task-card__button task-card__button--edit modal-button" data-modal-action="modal-edit"></button>
               </section>
               <a href='/timer' class="task-card__start link"></a>
             </section>
