fix modal win height

--- a/src/app/components/modals/modals.hbs
+++ b/src/app/components/modals/modals.hbs
@@ -8,7 +8,7 @@
       <button class="modal-win__btn modal-win__btn--confirm modal-button" data-modal-action="modal-confirm"></button>
     </section>
   </div>
-  <h3 class="modal-win__heading screen-heading">{{title}}</h3>
+  <h3 class="modal-win__heading">{{title}}</h3>
   <ul class="task-settings-list list ">
     <li class="task-settings-list__item">
       <h4 class="task-settings-list__heading">Title</h4>
