--- a/src/app/components/modals/modals.less
+++ b/src/app/components/modals/modals.less
@@ -5,7 +5,7 @@
   left: 50%;
   transform: translateX(-50%);
   width: 500px;
-  padding: 13px 27px 27px;
+  padding: 13px 27px 17px;
   background-color: @madison-col;
   font-size: 0;
 }
@@ -49,7 +49,12 @@
 }
 
 .modal-win__heading {
-  margin-bottom: 10px;
+  font-size: 28px;
+  font-weight: 500;
+  color: #ffffff;
+  text-align: center;
+  line-height: 21px;
+  margin-bottom: 5px;
 }
 
 .task-settings-list {
@@ -58,17 +63,17 @@
 
 .task-settings-list__item {
   min-width: 413px;
-  padding: 8px 0;
-  margin-bottom: 33px;
+  padding: 6px 0;
+  margin-bottom: 25px;
   border-bottom: 1px solid @categories-list-border-col;
 
   &:last-child {
-    margin-bottom: 20px;
+    margin-bottom: 15px;
   }
 }
 
 .task-settings-list__heading {
-  margin-bottom: 14px;
+  margin-bottom: 12px;
   font-size: 14px;
   text-transform: uppercase;
   color: #fff;
