add turning modal off by pressing esc

--- a/src/app/pages/tasks-list/task-list-done.hbs
+++ b/src/app/pages/tasks-list/task-list-done.hbs
@@ -2,7 +2,7 @@
   <header class="screen-header">
     <div class="main-container">
       <h1 class="screen-heading task-list-screen__screen-heading">Dalily Task List
-        <button class="task-list-screen__add-btn"></button>
+        <button class="task-list-screen__add-btn modal-button" data-modal-action="modal-add"></button>
       </h1>
       <div class="today-tasks__tabs-wrapper">
         <ul class="tabs tabs--right list">
