fix page reloading, add ..page.. component

--- a/src/app/pages/tasks-list/task-list.hbs
+++ b/src/app/pages/tasks-list/task-list.hbs
@@ -7,10 +7,10 @@
       <div class="today-tasks__tabs-wrapper">
         <ul class="tabs tabs--right list">
           <li class="tabs__item">
-            <a href="/task-list" class="tabs__btn tabs__btn--current">To Do</a>
+            <a href="/task-list" class="tabs__btn tabs__btn--current router-link">To Do</a>
           </li>
           <li class="tabs__item">
-            <a href="/task-list/done" class="tabs__btn">Done</a>
+            <a href="/task-list/done" class="tabs__btn router-link">Done</a>
           </li>
         </ul>
         <ul class="tabs  tabs--left tabs--remove list">
