--- a/src/app/pages/settings/settings-categories.hbs
+++ b/src/app/pages/settings/settings-categories.hbs
@@ -5,8 +5,8 @@
         <h3 class="subtitle">Pomodoros settings</h3>
         <h3 class="subtitle  hidden">Categories list overview</h3>
         <ul class="tabs tabs--right tabs--upper list">
-          <li class="tabs__item"><a href='/settings' class="tabs__btn">Pomodoros</a></li>
-          <li class="tabs__item"><a href='/settings/categories' class="tabs__btn tabs__btn--current" >Categories</a></li> 
+          <li class="tabs__item"><a href='/settings' class="tabs__btn router-link">Pomodoros</a></li>
+          <li class="tabs__item"><a href='/settings/categories' class="tabs__btn tabs__btn--current router-link" >Categories</a></li> 
         </ul>   
       </div>
     </header>
@@ -20,7 +20,7 @@
             <li class="categories-settings__list-item circled list">Sport</li>
             <li class="categories-settings__list-item circled list">Other</li>
           </ul>
-          <button class="button button--blue">Go to Tasks</button>
+          <a href="/task-list" class="button button--blue router-link">Go to Tasks</a>
         </section>
       </div>
     </section>
