--- a/src/app/pages/settings/settings.hbs
+++ b/src/app/pages/settings/settings.hbs
@@ -5,8 +5,8 @@
         <h3 class="subtitle">Pomodoros settings</h3>
         <h3 class="subtitle  hidden">Categories list overview</h3>
         <ul class="tabs tabs--right tabs--upper list">
-          <li class="tabs__item"><a class="tabs__btn tabs__btn--current tabs__btn--active">Pomodoros</a></li>
-          <li class="tabs__item"><a href='/settings/categories' class="tabs__btn" >Categories</a></li> 
+          <li class="tabs__item"><a class="tabs__btn tabs__btn--current tabs__btn--active router-link">Pomodoros</a></li>
+          <li class="tabs__item"><a href='/settings/categories' class="tabs__btn router-link" >Categories</a></li> 
         </ul>   
       </div>
     </header>
@@ -58,7 +58,7 @@
             <div class="pom-cycle__bottom-labels"></div>            
           </section>
           <section class="pom-settings__buttons">
-            <button class="button button--blue pom-settings--button">Go to Tasks</button>
+            <a href="/task-list" class="button button--blue pom-settings--button router-link">Go to Tasks</a>
             <button class="button button--green pom-settings--button">Save</button>
           </section>
         </section>
