--- a/src/app/components/modals/modals.hbs
+++ b/src/app/components/modals/modals.hbs
@@ -12,7 +12,7 @@
   <ul class="task-settings-list list ">
     <li class="task-settings-list__item">
       <h4 class="task-settings-list__heading">Title</h4>
-      <input type="text" class="task-settings-list__text-input" name="task-title"placeholder="Add title here">
+      <input type="text" class="task-settings-list__text-input" name="task-title"placeholder="Add title here" autofocus>
     </li>
     <li class="task-settings-list__item">
       <h4 class="task-settings-list__heading">Description</h4>
