--- a/src/app/pages/tasks-list/task-list-done.hbs
+++ b/src/app/pages/tasks-list/task-list-done.hbs
@@ -1,7 +1,7 @@
 <section class="screen task-list-screen">
   <header class="screen-header">
     <div class="main-container">
-      <h1 class="screen-heading task-list-screen__screen-heading">Dalily Task List
+      <h1 class="screen-heading task-list-screen__screen-heading">Daily Task List
         <button class="task-list-screen__add-btn modal-button" data-modal-action="modal-add"></button>
       </h1>
       <div class="today-tasks__tabs-wrapper">
@@ -50,23 +50,10 @@
         <p class="message-section__message message-section__message--done">Excellent,
           <br> all daily tasks done! :)</p>
       </section>
-      <ul class="task-list list">
-        <li class="task-card task-card--hobby task-card--urgent-priority task-card--done">
-          <section class="task-card__delete-indicator task-card__delete-indicator--active"></section>
-          <section class="task-card__date">Today</section>
-          <section class="task-card__task-info">
-            <h3 class="task-card__task-name">Lorem ipsum sit amet</h3>
-            <p class="tasc-card__task-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
-          </section>
-          <section class="task-card__buttons">
-            <section class="task-card__task-adjustsments">
-              <button class="task-card__button task-card__button--to-daily hidden"></button>
-              <button class="task-card__button task-card__button--edit"></button>
-            </section>
-            <a href='/timer' class="task-card__start"></a>
-          </section>
-        </li>
-      </ul>
+
+      <div class="done-tasks">
+
+      </div>
     </div>
   </section>
 </section>
